--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.08MB/s(Youtube:不良林), server: 5.183.176.83, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-186.9KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 5.183.176.80, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-513.5KB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-2.27MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-324.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-532.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
