--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 5.183.176.80, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-513.5KB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-2.27MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-219.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 5.183.176.81, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-354.7KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-324.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-333.7KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-532.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-558.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: 89.31.126.147, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
