--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-219.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 5.183.176.81, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-354.7KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-495.3KB/s(Youtube:不良林), server: 5.183.176.93, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-356.2KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-178.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-439.7KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
   - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-333.7KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-532.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-558.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: 89.31.126.147, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-232.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-817.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: 89.31.126.147, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-219.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
