--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-495.3KB/s(Youtube:不良林), server: 5.183.176.93, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-356.2KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-178.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-439.7KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.68MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-710.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-383.0KB/s(Youtube:不良林), server: 5.183.176.84, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.95MB/s(Youtube:不良林), server: 89.31.126.147, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-423.7KB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-333.7KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-232.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-817.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-495.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-356.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-710.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-333.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
