--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-934.3KB/s(Youtube:不良林), server: 5.183.176.93, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-290.7KB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-258.0KB/s(Youtube:不良林), server: 5.183.176.83, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-383.0KB/s(Youtube:不良林), server: 5.183.176.84, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 5.183.176.83, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-486.9KB/s(Youtube:不良林), server: 5.183.176.93, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-423.7KB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-232.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-817.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-880.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-942.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-934.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-290.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-258.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-383.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
       - 🇯🇵 日本-486.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-423.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-232.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-817.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-880.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
